force-app/main/default/objects/Account/fields/Car_Owner__c.field-meta.xml
<CustomField>
    <fullName>Car_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Car Owner</label>
    <type>Checkbox</type>
</CustomField>