force-app/main/default/objects/Account/fields/Date_field__c.field-meta.xml
<CustomField>
    <fullName>Date_field__c</fullName>
    <label>Date field</label>
    <type>Date</type>
</CustomField>