force-app/main/default/objects/Account/fields/First_Vaccine__c.field-meta.xml
<CustomField>
    <fullName>First_Vaccine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Vaccine</label>
    <type>Checkbox</type>
</CustomField>