force-app/main/default/objects/Account/fields/Fully_Vaccinated__c.field-meta.xml
<CustomField>
    <fullName>Fully_Vaccinated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fully Vaccinated</label>
    <type>Checkbox</type>
</CustomField>