force-app/main/default/objects/Account/fields/HeadAccount__c.field-meta.xml
<CustomField>
    <fullName>HeadAccount__c</fullName>
    <formula>IF( ParentId == null , Name , Parent.Name )</formula>
    <label>HeadAccount</label>
    <type>Text</type>
</CustomField>