force-app/main/default/objects/Account/fields/Match_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Match_Billing_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>With &#39;AccountAddressTrigger&#39; active, if an Account has a Billing Postal Code and &#39;Match_Billing_Address__c&#39; is true, the record should have the Shipping Postal Code set to match on insert or update.</description>
    <label>Match Billing Address</label>
    <type>Checkbox</type>
</CustomField>