force-app/main/default/objects/Account/fields/NHS_Number__c.field-meta.xml
<CustomField>
    <fullName>NHS_Number__c</fullName>
    <externalId>true</externalId>
    <label>NHS Number</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>