force-app/main/default/objects/Account/fields/TestFLS__c.field-meta.xml
<CustomField>
    <fullName>TestFLS__c</fullName>
    <label>TestFLS</label>
    <length>10</length>
    <type>Text</type>
</CustomField>