force-app/main/default/objects/Account/fields/Vaccine_Name__c.field-meta.xml
<CustomField>
    <fullName>Vaccine_Name__c</fullName>
    <label>Vaccine Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Moderna</fullName>
            </value>
            <value>
                <fullName>Pfizer</fullName>
            </value>
            <value>
                <fullName>AstraZeneca</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>