force-app/main/default/objects/Account/listViews/Car_Owners.listView-meta.xml
<ListView>
    <fullName>Car_Owners</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Car_Owner__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Car Owners</label>
</ListView>